welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:29: error: ')' expected but integer literal found.
				setPos(getX()11,getY())
                                             ^ZigZag:29: error: ';' expected but ')' found.
				setPos(getX()11,getY())
                                                      ^